new project for nexus on droplet added